--- a/post-with-firebase/package.json
+++ b/post-with-firebase/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "firebase": "^2.4.2",
+    "gh-pages": "^1.0.0",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
